# crawler-node

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml  test.yml
src/crawler_node/: __init__.py  __main__.py  config.py  constants.py  content_extractor.py  coordinator_client.py  crawler.py  language_predictor.py  link_discoverer.py  robots_handler.py
tests/: __init__.py
tests/unit/: test_content_extractor.py  test_coordinator_client.py  test_language_predictor.py  test_link_discoverer.py  test_robots_handler.py
